<resources>
    <string name="app_name" translatable="false">Posse Up</string>
    <string name="app_basic_info">
        Form groups and make new friends, whatever the event!
        You can join in on public events, or create your own private sessions for you and your friends
    </string>
    <string name="email_field">Email</string>
    <string name="username_field">Username</string>
    <string name="password_field">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_code">Code</string>
    <string name="cancel">Cancel</string>
    <string name="reset_begin">Confirm</string>
    <string name="reset_info">You will receive an email shortly with a unique code. Please paste it into the code area above, and click confirm to continue</string>
    <string name="no_account">Create Account</string>
    <string name="sign_up">Sign Up</string>

    <string name="action_settings">Settings</string>
    <string name="element_text_title_text">Element Title Text</string>
    <string name="element_date_time">THU, FEB 4, 7:30PM</string>

    <string name="full_name">Full Name</string>
    <string name="already_account">Already have an account? Sign in</string>

    <string name="hi">Hi </string>

    <string name="menu_sign_out">Sign out</string>
    <string-array name="event_type">
        <item>Public</item>
        <item>Invite-only</item>
        <item>Limited</item>
        <item>Private</item>
    </string-array>

    <string name="opendrawer">Opened</string>
    <string name="closeddrawer">Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string name="drawer_home">Home</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_events">Events</string>
    <string name="drawer_chat">Chat</string>


    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Profile</item>
        <item>Events</item>
        <item>Friends</item>
        <item>Settings</item>
    </string-array>

    <integer-array name="nav_drawer_icons">
        <item>@drawable/ic_home_grey</item>
        <item>@drawable/ic_account_circle_grey</item>
        <item>@drawable/ic_event_grey</item>
        <item>@drawable/ic_people_grey</item>
        <item>@drawable/ic_settings_grey</item>
    </integer-array>


    <string name="discover_nearby_devices">Discover nearby users</string>
    <string name="discover_nearby_devices_button">Discover nearby devices button</string>
    <string name="share_device_information">Share information</string>
    <string name="share_device_information_button">Share device information button</string>

    <string name="facebook_app_id" translatable="false">1543886725935090</string>


    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <!-- Example settings for Data & Sync -->

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="refresh">Refresh</string>
    <string name="create_event">Create</string>
    <string name="image_description">Background</string>
    <string name="event_image">Event image</string>
    <string name="drawer_icon">Drawer item icon</string>
    <string name="placeholder">PLACEHOLDER</string>

    <!--Create Event strings-->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="visibility">Visibility</string>
    <string name="venue">Venue</string>
    <string name="current_location">Current Location</string>
    <string name="default_venue_name">Not set</string>
    <string name="online_event">Online event</string>
    <string name="all_day">All Day</string>
    <string name="event_date" translatable="false">%1$d/%2$d/%3$d</string>
    <string name="add_zero"></string>
    <string name="event_time" translatable="false">%1$d:%2$d</string>
    <string name="add_image">Add an event picture</string>


    <string name="or">or</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="view_all">View all</string>

    <string name="rsvp" translatable="false">rsvp</string>
    <string name="leave">leave</string>
    <string name="guests_heading">guests (%1$d)</string>
    <string name="extra_guests">+ %1$d guests</string>

    <string name="follow">follow</string>
    <string name="unfollow">unfollow</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>


    <string name="delete_event">Delete event</string>
    <string name="edit_event">Edit event</string>
    <string name="invite">Invite</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="title_activity_attendance">Take Attendance</string>
    <string name="start_nearby_scan">Find Nearby Attendees</string>
    <string name="stop_nearby_scan">Stop searching for Attendees</string>
    <string name="add_to_confirmed">Confirm these attendees</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_option">New chat</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="write_message">Write a message</string>
    <string name="send">Send</string>
</resources>
