<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/username_field"
        android:ems="10"
        android:id="@+id/username_signin"
        android:textSize="12dp"
        android:textColor="@color/offWhite"
        android:textColorHint="@color/offWhite"
        android:minWidth="200dp"
        android:layout_below="@+id/signin_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/username_signin"
        android:layout_alignStart="@+id/username_signin"
        android:layout_marginTop="19dp"
        android:hint="@string/password_field"
        android:textSize="12dp"
        android:textColor="@color/offWhite"
        android:textColorHint="@color/offWhite"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:minWidth="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgot_password"
        android:id="@+id/forgot_password"
        android:layout_below="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:textSize="9dp"
        android:textColor="#99FFF8F8"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button"
            android:id="@+id/signin_button"
            android:textSize="12dp"
            android:background="#FF3366"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textColor="#FFF8F8"
            android:typeface="normal"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/no_account"
            android:id="@+id/signup_text"
            android:textColor="#FFF8F8"
            android:textSize="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>