<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">
    <data>
        <variable
            name="event"
            type="com.lordan.mark.PosseUp.Model.Event"/>
        <variable
            name="venue"
            type="com.lordan.mark.PosseUp.Model.PlaceVenue"/>
    </data>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/light_grey"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/imageView"
            android:contentDescription="@string/image_description"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/gradient_background" />
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:civ_border="false"
            android:src="@drawable/profiler"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_alignBottom="@id/imageView"
            android:layout_alignParentLeft="true" />

        <RelativeLayout
            android:id="@+id/event_time_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_below="@+id/imageView"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/event_time_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:layout_marginStart="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_small"
                android:paddingBottom="@dimen/margin_small"
                android:src="@drawable/ic_query_builder"
                android:layout_marginLeft="@dimen/margin_medium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{event.startingCal, default=PLACEHOLDER}"
                android:paddingStart="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_small"
                android:layout_toRightOf="@+id/event_time_icon"
                android:textAllCaps="true"
                android:paddingLeft="@dimen/margin_medium" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_location_group"
            android:layout_below="@+id/event_time_group"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/event_location_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:background="@android:color/white"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:layout_marginRight="1dp">
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/event_location_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:paddingTop="@dimen/margin_small"
                    android:paddingBottom="@dimen/margin_small"
                    android:src="@drawable/ic_place"
                    android:layout_marginLeft="@dimen/margin_medium" />
                <TextView
                    android:id="@+id/event_location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/material_text_subhead"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_toRightOf="@+id/event_location_icon"
                    android:text="@{venue.venueName, default=PLACEHOLDER}"
                    android:layout_marginLeft="@dimen/margin_medium" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{venue.venueAddress, default=PLACEHOLDER}"
                    android:textSize="@dimen/material_text_body1"
                    android:textColor="@android:color/black"
                    android:layout_below="@+id/event_location_title"
                    android:layout_alignLeft="@+id/event_location_title"
                    android:layout_toRightOf="@+id/event_location_icon"/>
            </RelativeLayout>
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/directions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_directions"
                android:clickable="true"
                android:background="@android:color/white"
                android:paddingTop="@dimen/margin_small"
                android:paddingBottom="@dimen/margin_small"
                android:paddingStart="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_medium"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/attendee_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="1dp"
            android:layout_below="@+id/event_location_group">
            <TextView
                android:id="@+id/event_guests_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:textAllCaps="true"
                android:paddingTop="@dimen/margin_medium"
                android:textSize="@dimen/material_text_button"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium" />
            <LinearLayout
                android:id="@+id/event_details_pictures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_guests_heading"
                android:layout_marginTop="@dimen/margin_tiny"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:layout_marginStart="@dimen/margin_medium"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_medium">

            </LinearLayout>
            <Button
                android:id="@+id/event_guests_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#2196F3"
                android:text="@string/view_all"
                style="?android:attr/borderlessButtonStyle"
                android:background="@android:color/transparent"
                android:layout_below="@+id/event_details_pictures"
                />
        </RelativeLayout>


        <Button
            android:id="@+id/attend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rsvp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/attendee_holder"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</layout>